[gd_scene load_steps=2 format=3 uid="uid://main_scene"]

[ext_resource type="Script" path="res://Main.gd" id="1_main"]

[node name="Main" type="Node2D"]
script = ExtResource("1_main")

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
layer = -10

[node name="PlatformsContainer" type="Node2D" parent="."]

[node name="PlayerContainer" type="Node2D" parent="."]

[node name="EnemyContainer" type="Node2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]
layer = 100
